<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbOption1"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/rbOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_1"/>

        <RadioButton
            android:id="@+id/rbOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_2"/>

        <RadioButton
            android:id="@+id/rbOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_3"/>

        <RadioButton
            android:id="@+id/rbOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_4"/>

        <RadioButton
            android:id="@+id/rbOption5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_option_5"/>
    </RadioGroup>

</LinearLayout>