<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup1"
        app:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_opcion1"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_opcion2"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpcion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_opcion3"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpcion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_opcion4"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOpcion5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_opcion5"/>

    </com.google.android.material.chip.ChipGroup>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            app:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_opcion1"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_opcion2"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_opcion3"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_opcion4"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_opcion5"/>

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</LinearLayout>